--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
         }
     ],
     "autoload": {
-        "psr-0": { "RBM": "lib/" }
+        "psr-0": { "RBM\\Wkhtmltopdf": "lib/RBM/Wkhtmltopdf" }
     },
     "require-dev": {
         "phpunit/phpunit": "3.7.*"
